[package]
name = "bobsled"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["greedy"]

# Enables the GreedyKey structure, used to alter the way variable-length data is encoded/decoded
greedy = []

[dependencies]
bincode = "^1.3.3"
bobsled_macros = { path = "./bobsled-macros" }
paste = "1.0"

# Implements the Store trait for various `sled` structures
sled = { version = "^0.34.6", optional = true }

# Used to enable more accurate prefix matching (using UTF-32) for unicode characters
widestring = { version = "^0.4.3", optional = true }
